hopefully fix the spacing betwen elements. I don't have the ability to run locally tho

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,6 +23,7 @@
   top: 0;
   width: 100%;
   padding-bottom: 60px;
+  column-gap: 1rem;
 }
 .header .push {
   margin-left: auto;
